[package]
name = "chattory"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3     # Optimize for speed.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
# panic = "abort"   # Abort on panic

[dependencies]
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
twitch-irc = { version = "4.0.0", features = ["with-serde"] }
