[package]
name = "chattory"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3     # Optimize for speed.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
# panic = "abort"   # Abort on panic

[dependencies]
rayon = "1.10.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
twitch-irc = { version = "5.0.1", features = ["with-serde"] }
